Refactoring to move sentDateTime field from Notification to NotificationChannel and add active field